--- a/login.html
+++ b/login.html
@@ -6,23 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FORM VALIDATION</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/2bbac3a66c.js" crossorigin="anonymous" ></script>
+    <scriptsr c="https://kit.fontawesome.com/2bbac3a66c.js" crossorigin="anonymous" ></script>
 </head>
 <body>
-    <form  id="create-account-form" action="login.html" method="post">
+    <form  id="login-form" action="inbox.html" method="post">
         
         <div class="title">
-            <h2>Create Account</h2>
+            <h2>Login</h2>
         </div>
-        <!-- USERNAME -->
-        <div class="input-group">
-            <label for="username">Name</label>
-            <input type="text" id="username" placeholder="Name" name="username">
-            <!-- <i id="envelope" class="fa-solid fa-envelope"></i> -->
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <p>Error Message</p>
-        </div>
+        
         <!-- EMAIL -->
         <div class="input-group">
             <label for="email">Email</label>
@@ -39,21 +31,13 @@
             <i class="fas fa-exclamation-circle"></i>
             <p>Error Message</p>
         </div>
-        <!-- CONFIRM PASSWORD -->
-        <div class="input-group">
-            <label for="confirm-password">Confirm Password</label>
-            <input type="password" id="confirm-password" placeholder="Password" name="confirmpassword">
-            <i class="fas fa-check-circle"></i>
-            <i class="fas fa-exclamation-circle"></i>
-            <p>Error Message</p>
-        </div>
 
         <button type="submit" class="btn">Submit</button>
     </form>
 
 
     <!-- JAVASCRIPT -->
-    <script src="app.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
 
